# relational-spin-networks

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
docs/: README.md  equation_registry.md  experiment_protocol.md  math_foundations.md  math_status_ledger.md  observable_registry.md  parameter_units_registry.md
references/encrypted/: README.md  rsn_framework.pdf.gpg
src/relational_spin_networks/: __init__.py
src/relational_spin_networks/analysis/: __init__.py  summary.py
src/relational_spin_networks/configs/: __init__.py  base.py
src/relational_spin_networks/core/: __init__.py  block.py  energy.py  projector.py  strain.py  winding.py
src/relational_spin_networks/experiments/: __init__.py  e1.py  e2.py  e3.py  e4.py
src/relational_spin_networks/io/: __init__.py  paths.py  run_manifest.py
src/relational_spin_networks/provenance/: __init__.py  checksums.py  metadata.py
tests/: __init__.py
tools/: __init__.py  update_checksums.py
