[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relational-spin-networks"
version = "0.1.0"
description = "Scaffold for a computational-physics project."
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy",
    "h5py",
    "matplotlib",
    "pytest",
    "mkdocs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
