[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relational-spin-networks"
version = "0.1.0"
description = "Computational scaffold for relational spin network experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "PhysicsSimLAB" }]
dependencies = [
    "numpy",
    "h5py",
    "matplotlib",
    "pytest",
    "mkdocs",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
